--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -154,7 +154,7 @@ main {
   padding: var(--mdc-layout-grid-gutter-desktop, 24px);
 }
 
-.mdc-select {
+#alchemy-course-view .mdc-select {
   margin-top: 16px;
 }
 
@@ -179,12 +179,6 @@ main {
   background-color: var(--alchemy-theme-selected);
 }
 
-.alchemy-course--view__table--empty::after {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--alchemy-theme-selected);
+#alchemy-course-add .mdc-text-field {
   width: 100%;
-  height: 64px;
-  content: "No courses to display."
 }
