--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -172,6 +172,29 @@ main {
   font-size: 0.875rem;
 }
 
+.mdc-list .focused {
+  background-color: var(--alchemy-theme-selected);
+}
+
+/*
+|--------------------------------------------------------------------------
+| Alchemy Common
+|--------------------------------------------------------------------------
+*/
+
+i.alchemy-select__cancel {
+  display: none;
+  position: absolute;
+  left: auto;
+  right: 0;
+  cursor: pointer;
+  padding: 15px;
+}
+
+i.alchemy-select__cancel--visible {
+  display: block;
+}
+
 /*
 |--------------------------------------------------------------------------
 | Alchemy Course
