--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -182,6 +182,10 @@ main {
 |--------------------------------------------------------------------------
 */
 
+.mdc-list-item {
+  cursor: pointer;
+}
+
 i.alchemy-select__cancel {
   display: none;
   position: absolute;
