Major update --other

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -335,6 +335,10 @@ main {
   margin-top: 16px;
 }
 
+#alchemy-department-add .mdc-select {
+  margin-top: 16px;
+}
+
 #alchemy-department-view__table table tr {
   cursor: pointer;
 }
